add create record api
